[project]
name = "agentic-rag-for-dummies"
version = "0.1.0"
description = "following https://github.com/GiovanniPasq/agentic-rag-for-dummies"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub>=0.36.0",
    "langchain>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.0",
    "langgraph>=1.0.3",
    "marimo>=0.17.8",
    "torch>=2.9.1",
    "transformers>=4.57.1",
]
