[project]
name = "agentic-rag-for-dummies"
version = "0.1.0"
description = "following https://github.com/GiovanniPasq/agentic-rag-for-dummies"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastembed>=0.7.3",
    "flashrank>=0.2.10",
    "gradio>=5.49.1",
    "ipython>=9.7.0",
    "langchain>=1.0.7",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.5",
    "langchain-huggingface>=1.0.1",
    "langchain-ollama>=1.0.0",
    "langchain-qdrant>=1.1.0",
    "langgraph>=1.0.3",
    "marimo>=0.17.8",
    "pymupdf>=1.26.6",
    "pymupdf-layout>=1.26.6",
    "pymupdf4llm>=0.2.0",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.1.2",
]
